--- a/PolyFlow/PolyFlow.csproj
+++ b/PolyFlow/PolyFlow.csproj
@@ -24,7 +24,7 @@
 		<ApplicationTitle>PolyFlow</ApplicationTitle>
 
 		<!-- App Identifier -->
-		<ApplicationId>com.companyname.polyflow</ApplicationId>
+		<ApplicationId>com.lukebroglio.polyflow</ApplicationId>
 
 		<!-- Versions -->
 		<ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
@@ -48,6 +48,8 @@
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
 		<MauiImage Update="Resources\Images\dotnet_bot.png" Resize="True" BaseSize="300,185" />
+		<MauiImage Update="Resources\Images\cursor.png" Resize="True" BaseSize="50, 30.85" />
+
 
 		<!-- Custom Fonts -->
 		<MauiFont Include="Resources\Fonts\*" />
